# cargo-arc

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  biome.json  build.rs  jsconfig.json  package.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/adr/: 001-deterministic-tree-layout.md  002-four-stage-pipeline.md  003-single-crate-with-module-separation.md  004-direct-svg-generation.md  005-unified-graph-with-contains-edges.md  006-self-contained-svg-with-embedded-metadata.md  007-feature-filtering-via-cargo-metadata-resolve.md  008-svg-layer-z-order.md  009-tracing-for-structured-logging.md  010-dom-adapter-pattern.md  011-state-derived-separation.md  012-dom-rebuild-on-collapse-expand.md  013-syn-as-primary-analysis-backend.md  014-build-time-js-module-registry.md  015-foreign-object-html-for-panels.md  016-sidebar-replaces-tooltip.md  017-scc-condensation-for-cycle-resolution.md  018-edge-context-enum.md
js/: app_state.js  app_state.test.js  arc_logic.js  arc_logic.test.js  derived_state.js  derived_state.test.js  dom_adapter.js  dom_adapter.test.js  globals.d.ts  highlight_integration.test.js  highlight_logic.js  highlight_logic.test.js  highlight_renderer.js  highlight_renderer.test.js  layer_manager.js  layer_manager.test.js  pinned_sidebar_refresh.test.js  search.js  search.test.js  selectors.js  selectors.test.js  sidebar.js  sidebar.test.js  static_data.js  static_data.test.js  svg_script.js  svg_script.test.js  text_metrics.js  text_metrics.test.js  tree_logic.js  tree_logic.test.js  virtual_edge_logic.js  virtual_edge_logic.test.js
scripts/: loc.sh
src/: analyze.rs  app_state.js  app_state.test.js  arc_logic.js  arc_logic.test.js  arrow_logic.js  arrow_logic.test.js  cli.rs  derived_state.js  derived_state.test.js  dom_adapter.js  dom_adapter.test.js  graph.rs  highlight_integration.test.js  highlight_logic.js  highlight_logic.test.js  js_registry.rs  layer_manager.js  layer_manager.test.js  layout.rs  lib.rs  main.rs  model.rs  render.rs  selectors.js  selectors.test.js  static_data.js  static_data.test.js  svg_script.js  svg_script.test.js  text_metrics.js  text_metrics.test.js  tree_logic.js  tree_logic.test.js  virtual_edge_logic.js  volatility.rs
src/analyze/: backend.rs  externals.rs  filtering.rs  hir.rs  mod.rs  syn_walker.rs  use_parser.rs  workspace.rs
src/layout/: build.rs  cycles.rs  mod.rs  toposort.rs
src/render/: constants.rs  css.rs  elements.rs  mod.rs  positioning.rs  (+1 more)
tests/: integration.rs
(+39 files in other folders)
