[package]
name = "cargo-arc"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
petgraph = "0.6"
cargo_metadata = "0.18"
anyhow = "1"

# ra_ap_* for module hierarchy extraction (pinned to exact versions like cargo-modules)
ra_ap_hir = "=0.0.289"
ra_ap_ide = "=0.0.289"
ra_ap_ide_db = "=0.0.289"
ra_ap_load-cargo = "=0.0.289"
ra_ap_paths = "=0.0.289"
ra_ap_project_model = "=0.0.289"
ra_ap_vfs = "=0.0.289"
ra_ap_cfg = "=0.0.289"
dunce = "1.0.4"

[dev-dependencies]
tempfile = "3"

# Profile for faster ra_ap_* builds (mirroring cargo-modules approach)
[profile.dev.package."ra_ap_hir"]
opt-level = 2
[profile.dev.package."ra_ap_ide"]
opt-level = 2
[profile.dev.package."ra_ap_ide_db"]
opt-level = 2
[profile.dev.package."ra_ap_load-cargo"]
opt-level = 2
[profile.dev.package."ra_ap_project_model"]
opt-level = 2
[profile.dev.package."ra_ap_vfs"]
opt-level = 2
