[package]
name = "cargo-arc"
version = "0.0.1"
edition = "2024"
description = "Visualize crate and module dependencies in Cargo workspaces"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "dependencies", "architecture", "visualization", "workspace"]
categories = ["development-tools::cargo-plugins"]
authors = ["Sebastian Flügge"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
petgraph = "0.8"
cargo_metadata = "0.23"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ra_ap_* for HIR-based module analysis (optional, behind "hir" feature)
ra_ap_hir = { version = "=0.0.316", optional = true }
ra_ap_ide = { version = "=0.0.316", optional = true }
ra_ap_ide_db = { version = "=0.0.316", optional = true }
ra_ap_load-cargo = { version = "=0.0.316", optional = true }
ra_ap_paths = { version = "=0.0.316", optional = true }
ra_ap_project_model = { version = "=0.0.316", optional = true }
ra_ap_vfs = { version = "=0.0.316", optional = true }
ra_ap_cfg = { version = "=0.0.316", optional = true }
dunce = "1.0.4"
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[features]
hir = [
  "dep:ra_ap_hir",
  "dep:ra_ap_ide",
  "dep:ra_ap_ide_db",
  "dep:ra_ap_load-cargo",
  "dep:ra_ap_paths",
  "dep:ra_ap_project_model",
  "dep:ra_ap_vfs",
  "dep:ra_ap_cfg",
]

[dev-dependencies]
tempfile = "3"
